WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314200
AX: Fix isolated tree mode test failures for sync actions, element-by-ID lookup, and async tree updates
https://bugs.webkit.org/show_bug.cgi?id=314200
Summary
AX: Fix isolated tree mode test failures for sync actions, element-by-ID look...
Tyler Wilcock
Reported
2026-05-06 07:57:21 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-06 07:57:27 PDT
<
rdar://problem/176364545
>
Tyler Wilcock
Comment 2
2026-05-06 08:01:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64369
EWS
Comment 3
2026-05-07 18:24:49 PDT
Committed
312848@main
(10cf146df71d): <
https://commits.webkit.org/312848@main
> Reviewed commits have been landed. Closing PR #64369 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug